@@ -1,6 +1,7 @@
 # KDE Config File
 [KDE Desktop Entry]
 Comment[C]=Internet dial-up tool
+Comment[de]=Internet Wahlhilfe
 BinaryPattern=kppp;
 Protocols=
 Name[C]=Kppp
