@@ -1,3 +1,9 @@
+Wed Jan  7 13:00:24 1998  Mario Weilguni  <mario@loki.valhalla.at>
+
+	* edit.cpp: improved the IP and Gateway widgets
+
+	* various improvements for the geometry managements
+
 Tue Jan  6 12:56:14 1998  Mario Weilguni  <mario@loki.valhalla.at>
 
 	* main.cpp: the main kppp window has now layout control
